--- a/projects/ngx3js/tsconfig.lib.json
+++ b/projects/ngx3js/tsconfig.lib.json
@@ -1,6 +1,23 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "../../tsconfig.json",
+  "buildOptimizer": false,
+  "optimization": {
+    "scripts": false,
+    "styles": {
+      "minify": false,
+      "inlineCritical": false
+    },
+    "fonts": {
+      "inline": true
+    }
+  },
+  "vendorChunk": false,
+  "extractLicenses": false,
+  "sourceMap": true,
+  "namedChunks": false,
+  "aot": true,
+  "inlineStyleLanguage": "scss",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
     "target": "es2015",
