--- a/package.json
+++ b/package.json
@@ -10,39 +10,39 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
+    "@angular/animations": "^12.2.10",
+    "@angular/common": "^12.2.10",
+    "@angular/compiler": "^12.2.10",
+    "@angular/core": "^12.2.10",
+    "@angular/forms": "^12.2.10",
+    "@angular/platform-browser": "^12.2.10",
+    "@angular/platform-browser-dynamic": "^12.2.10",
+    "@angular/router": "^12.2.10",
     "ammojs-typed": "^1.0.6",
     "chroma-js": "^2.1.2",
-    "gsap": "^3.7.1",
-    "oimophysics": "^1.2.2",
-    "tslib": "^2.3.1",
-    "three": "0.131.0",
-    "@types/three": "0.131.0",
-    "rxjs": "^6.6.7",
     "fs": "0.0.1-security",
     "fs-web": "^1.0.1",
+    "gsap": "^3.8.0",
+    "oimophysics": "^1.2.2",
+    "rxjs": "^6.6.7",
+    "three": "0.133.1",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.6",
-    "@angular/cli": "~12.2.4",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular-devkit/build-angular": "^12.2.10",
+    "@angular/cli": "^12.2.10",
+    "@angular/compiler-cli": "^12.2.10",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.33",
+    "@types/three": "0.133.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ng-packagr": "^12.1.1",
+    "ng-packagr": "^12.2.3",
     "typescript": "~4.3.5"
   }
 }
