--- a/projects/ngx3js/package.json
+++ b/projects/ngx3js/package.json
@@ -51,32 +51,32 @@
 		"stream": false,
 		"tls": false
 	},
-	"dependencies": {},
-	"devDependencies": {
+	"dependencies": {
 		"ammojs-typed": "^1.0.6",
 		"chroma-js": "^2.1.2",
-		"gsap": "^3.7.1",
-		"oimophysics": "^1.2.2",
-		"tslib": "^2.3.1",
-		"three": "0.131.0",
-		"rxjs": "^6.6.7",
 		"fs": "0.0.1-security",
 		"fs-web": "^1.0.1",
-		"@types/three": "0.131.0",
-		"@angular/cli": "^12.2.5",
-		"@angular/common": "^12.2.5",
-		"@angular/core": "^12.2.5",
-		"@angular/platform-browser": "^12.2.5",
-		"@angular/compiler-cli": "^12.2.5",
-		"@angular/compiler": "^12.2.5",
+		"gsap": "^3.8.0",
+		"rxjs": "^6.6.7",
+		"three": "0.133.1"
+	},
+	"devDependencies": {
+		"@angular/cli": "^12.2.10",
+		"@angular/common": "^12.2.10",
+		"@angular/compiler": "^12.2.10",
+		"@angular/compiler-cli": "^12.2.10",
+		"@angular/core": "^12.2.10",
+		"@angular/platform-browser": "^12.2.10",
 		"@types/chroma-js": "^2.1.3",
-		"zone.js": "~0.11.4",
+		"oimophysics": "^1.2.2",
 		"ts-node": "~8.3.0",
+		"tslib": "^2.3.1",
 		"tslint": "~6.1.0",
 		"typedoc": "^0.21.9",
 		"typescript": "~4.3.2",
+		"webpack": "^5.58.2",
 		"webworkify": "^1.5.0",
-		"webpack": "^5.52.1",
-		"worker-loader": "^3.0.8"
+		"worker-loader": "^3.0.8",
+		"zone.js": "~0.11.4"
 	}
 }
