--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
+    "allowJs": true,
     "strictNullChecks" : false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
