--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@angular/animations": "^12.2.10",
-    "@angular/common": "^12.2.10",
-    "@angular/compiler": "^12.2.10",
-    "@angular/core": "^12.2.10",
-    "@angular/forms": "^12.2.10",
-    "@angular/platform-browser": "^12.2.10",
-    "@angular/platform-browser-dynamic": "^12.2.10",
-    "@angular/router": "^12.2.10",
+    "@angular/animations": "^12.2.13",
+    "@angular/common": "^12.2.13",
+    "@angular/compiler": "^12.2.13",
+    "@angular/core": "^12.2.13",
+    "@angular/forms": "^12.2.13",
+    "@angular/platform-browser": "^12.2.13",
+    "@angular/platform-browser-dynamic": "^12.2.13",
+    "@angular/router": "^12.2.13",
     "ajv": "^6.12.6",
     "ammojs-typed": "^1.0.6",
     "chroma-js": "^2.1.2",
@@ -35,25 +35,26 @@
     "gsap": "^3.8.0",
     "oimophysics": "^1.2.2",
     "rxjs": "^6.6.7",
-    "three": "0.133.1",
+    "three": "0.134.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.10",
-    "@angular/cli": "^12.2.10",
-    "@angular/compiler-cli": "^12.2.10",
+    "@angular-devkit/build-angular": "^12.2.13",
+    "@angular/cli": "^12.2.13",
+    "@angular/compiler-cli": "^12.2.13",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.20.33",
-    "@types/three": "^0.133.1",
+    "@types/node": "^12.20.37",
+    "@types/three": "0.134.0",
     "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
+    "karma": "^6.3.8",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "ng-packagr": "^12.2.3",
-    "typedoc": "^0.22.7",
+    "lil-gui": "^0.12.0",
+    "ng-packagr": "^12.2.5",
+    "typedoc": "^0.22.8",
     "typescript": "~4.3.5"
   }
 }
