--- a/projects/ngx3js/package.json
+++ b/projects/ngx3js/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ngx3js",
-	"version": "1.0.17",
+	"version": "0.134.0-20211109",
 	"keywords": [
 		"three",
 		"three.js",
@@ -58,7 +58,7 @@
 		"fs-web": "^1.0.1",
 		"gsap": "^3.8.0",
 		"rxjs": "^6.6.7",
-		"three": "0.133.1"
+		"three": "0.134.0"
 	},
 	"devDependencies": {
 		"@angular/cli": "^12.2.10",
@@ -68,6 +68,7 @@
 		"@angular/core": "^12.2.10",
 		"@angular/platform-browser": "^12.2.10",
 		"@types/chroma-js": "^2.1.3",
+		"lil-gui": "^0.12.0",
 		"oimophysics": "^1.2.2",
 		"ts-node": "~8.3.0",
 		"tslib": "^2.3.1",
