--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "build": "ng build ngx3js --configuration production",
     "publish": "cd dist/ngx3js && npm publish",
     "watch": "ng build --watch --configuration development",
-    "fixtype": "cd fix && node fix.js && cd ..",
     "docs": "rm -rf docs && cd projects/ngx3js && npx typedoc --tsconfig tsconfig.lib.json",
     "test": "ng test"
   },
@@ -27,15 +26,8 @@
     "@angular/platform-browser": "^12.2.13",
     "@angular/platform-browser-dynamic": "^12.2.13",
     "@angular/router": "^12.2.13",
-    "ajv": "^6.12.6",
-    "ammojs-typed": "^1.0.6",
-    "chroma-js": "^2.1.2",
-    "fs": "0.0.1-security",
-    "fs-web": "^1.0.1",
-    "gsap": "^3.8.0",
-    "oimophysics": "^1.2.2",
+    "@types/estree": "^0.0.50",
     "rxjs": "^6.6.7",
-    "three": "0.134.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
@@ -45,14 +37,12 @@
     "@angular/compiler-cli": "^12.2.13",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.20.37",
-    "@types/three": "0.134.0",
     "jasmine-core": "~3.8.0",
     "karma": "^6.3.8",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "lil-gui": "^0.12.0",
     "ng-packagr": "^12.2.5",
     "typedoc": "^0.22.8",
     "typescript": "~4.3.5"
