--- a/projects/ngx3js/tsconfig.lib.json
+++ b/projects/ngx3js/tsconfig.lib.json
@@ -35,7 +35,9 @@
   },
   "exclude": [
     "src/test.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "tests/**/*",
+    "**/node_modules/**/*",
   ],
 	"typedocOptions" : {
 		"entryPoints": ["src/public-api.ts"],
