--- a/projects/ngx3js-assets/package.json
+++ b/projects/ngx3js-assets/package.json
@@ -1,6 +1,16 @@
 {
   "name": "ngx3js-assets",
   "version": "0.0.1",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/outmindkjg/ngx3js-module.git"
+	},
+	"description": "Angular & Javascript 3D library",
+	"author": "outmind0@gmail.com",
+	"bugs": {
+		"url": "https://github.com/outmindkjg/ngx3js-module/issues"
+	},
   "peerDependencies": {
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0"
