--- a/projects/ngx3js/package.json
+++ b/projects/ngx3js/package.json
@@ -26,7 +26,7 @@
 		"url": "git://github.com/outmindkjg/ngx3js-module.git"
 	},
 	"description": "Angular & Javascript 3D library",
-	"author": "outmindkjg",
+	"author": "outmind0@gmail.com",
 	"bugs": {
 		"url": "https://github.com/outmindkjg/ngx3js-module/issues"
 	},
