--- a/projects/ngx3js/package.json
+++ b/projects/ngx3js/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ngx3js",
-	"version": "0.134.0-2021111123",
+	"version": "0.134.0-2021111209",
 	"keywords": [
 		"three",
 		"three.js",
@@ -31,7 +31,7 @@
 		"url": "https://github.com/outmindkjg/ngx3js-module/issues"
 	},
 	"bin": {
-		"installthreejs": "./bin/installthreejs.js"
+		"patch": "./bin/patch.js"
 	},
 	"homepage": "https://outmindkjg.github.io/ngx3js-doc/",
 	"dependencies": {
