--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,8 @@
 		"declaration": false,
 		"downlevelIteration": true,
 		"paths": {
-      "ngx3js": [
-        "dist/ngx3js/ngx3js",
-        "dist/ngx3js"
-      ],
-      "ngx3js-assets": [
-        "dist/ngx3js-assets/ngx3js-assets",
-        "dist/ngx3js-assets"
-      ]
+			"ngx3js": ["dist/ngx3js/ngx3js", "dist/ngx3js"],
+			"ngx3js-assets": ["dist/ngx3js-assets/ngx3js-assets", "dist/ngx3js-assets"]
 		},
 		"experimentalDecorators": true,
 		"moduleResolution": "node",
