--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@angular/router": "^12.2.13",
     "rxjs": "^6.6.7",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "three": "0.136.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.0.3",
@@ -50,7 +51,8 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^12.2.5",
     "typedoc": "^0.22.8",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "@types/three": "0.136.1"
   },
   "keywords": [
     "three",
